<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        >
    
    <TextView
        android:id="@+id/header_name"
        android:text="@string/header_name"
        style="@style/HeaderStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
    	android:layout_weight = "0.6" />

    <TextView
        android:id="@+id/header_invqty"
        android:text="@string/header_invqty"
        style="@style/HeaderStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight = "1"/>

    <TextView
        android:id="@+id/header_buyqty"
        android:text="@string/header_buyqty"
        style="@style/HeaderStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_weight = "1"/>

    </TableRow>
    
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
        <ListView android:id="@+id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/android:empty"
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/no_items"/>
  	</TableRow>
	<TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >
    
        <Button
            android:id="@+id/bought_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bought" />

  	</TableRow>
    
</LinearLayout>

 